apps/web/src/content/docs/v3/getting-started/installation.mdx
---
title: Installation
description: Set up a new Effect project across different platforms like Node.js, Deno, Bun, and Vite + React with step-by-step installation guides.
sidebar:
  order: 2
---

import { Steps, Tabs, TabItem } from "@astrojs/starlight/components"

Requirements:

- TypeScript 5.4 or newer.
- Node.js 22.18 or newer, Deno, and Bun are supported.

## Manual Installation

### JavaScript runtimes

Follow these steps to create a new Effect project for [Node.js](https://nodejs.org/), [Bun](https://bun.sh/), or [Deno](https://deno.com/):

<Steps>

1. Create a project directory and navigate into it:

   ```sh showLineNumbers=false
   mkdir hello-effect
   cd hello-effect
   ```

2. Initialize a TypeScript project:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npm init -y
   npm install --save-dev typescript
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm init
   pnpm add --save-dev typescript
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn init -y
   yarn add --dev typescript
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   bun init
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   deno init
   ```

   </TabItem>

   </Tabs>

   This creates a `package.json` file with an initial setup for your TypeScript project. For Bun, this also generates a `tsconfig.json` file. For Deno, this generates a `deno.json` file.

   Make sure the `package.json` file contains the `"type": "module"` field, so that Node.js treats your source files as ES modules (`bun init` adds this automatically):

   ```json showLineNumbers=false
   {
     "type": "module"
   }
   ```

3. Initialize TypeScript:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npx tsc --init
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm tsc --init
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn tsc --init
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   `bun init` has already generated a `tsconfig.json` file.

   </TabItem>

   <TabItem label="Deno" icon="deno">

   Deno runs TypeScript out of the box, and `deno init` has already generated a `deno.json` file with `strict` mode enabled by default. No further configuration is needed.

   </TabItem>

   </Tabs>

   When running this command, it will generate a `tsconfig.json` file that contains configuration options for TypeScript. One of the most important options to consider is the `strict` flag.

   Make sure to open the `tsconfig.json` file and verify that the value of the `strict` option is set to `true`.

   ```json showLineNumbers=false
   {
     "compilerOptions": {
       "strict": true
     }
   }
   ```

4. Install the necessary package as dependency:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npm install effect
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm add effect
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn add effect
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   bun add effect
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   deno add npm:effect
   ```

   </TabItem>

   </Tabs>

   This package will provide the foundational functionality for your Effect project.

</Steps>

Let's write and run a simple program to ensure that everything is set up correctly.

In your terminal, execute the following commands:

```sh showLineNumbers=false
mkdir src
touch src/index.ts
```

Open the `src/index.ts` file and add the following code:

```ts title="src/index.ts"
import { Effect, Console } from "effect"

const program = Console.log("Hello, World!")

Effect.runSync(program)
```

Run the `src/index.ts` file. Node.js 22.18 or newer, Bun, and Deno can run TypeScript files directly, so no additional tooling is needed:

<Tabs syncKey="package-manager">

<TabItem label="npm" icon="seti:npm">

```sh showLineNumbers=false
node src/index.ts
```

</TabItem>

<TabItem label="pnpm" icon="pnpm">

```sh showLineNumbers=false
node src/index.ts
```

</TabItem>

<TabItem label="Yarn" icon="seti:yarn">

```sh showLineNumbers=false
node src/index.ts
```

</TabItem>

<TabItem label="Bun" icon="bun">

```sh showLineNumbers=false
bun src/index.ts
```

</TabItem>

<TabItem label="Deno" icon="deno">

```sh showLineNumbers=false
deno run src/index.ts
```

</TabItem>

</Tabs>

If you are using an older version of Node.js, run the file with [tsx](https://github.com/privatenumber/tsx) instead: `npx tsx src/index.ts`.

You should see the message `"Hello, World!"` printed. This confirms that the program is working correctly.

### Vite + React

Follow these steps to create a new Effect project for [Vite](https://vitejs.dev/guide/) + [React](https://react.dev/):

<Steps>

1. Scaffold your Vite project, open your terminal and run the following command:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   # npm 6.x
   npm create vite@latest hello-effect --template react-ts
   # npm 7+, extra double-dash is needed
   npm create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   bun create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   deno init --npm vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   </Tabs>

   This command will create a new Vite project with React and TypeScript template.

2. Navigate into the newly created project directory and install the required packages:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   cd hello-effect
   npm install
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   cd hello-effect
   pnpm install
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   cd hello-effect
   yarn install
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   cd hello-effect
   bun install
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   cd hello-effect
   deno install
   ```

   </TabItem>

   </Tabs>

   Once the packages are installed, open the `tsconfig.json` file and ensure that the value of the `strict` option is set to true.

   ```json showLineNumbers=false
   {
     "compilerOptions": {
       "strict": true
     }
   }
   ```

3. Install the necessary package as dependency:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npm install effect
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm add effect
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn add effect
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   bun add effect
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   deno add npm:effect
   ```

   </TabItem>

   </Tabs>

   This package will provide the foundational functionality for your Effect project.

</Steps>

Now, let's write and run a simple program to ensure that everything is set up correctly.

Open the `src/App.tsx` file and replace its content with the following code:

```diff lang="tsx" title="src/App.tsx"
+import { useState, useMemo, useCallback } from "react"
import reactLogo from "./assets/react.svg"
import viteLogo from "/vite.svg"
import "./App.css"
+import { Effect } from "effect"

function App() {
  const [count, setCount] = useState(0)

+  const task = useMemo(
+    () => Effect.sync(() => setCount((current) => current + 1)),
+    [setCount]
+  )
+
+  const increment = useCallback(() => Effect.runSync(task), [task])

  return (
    <>
      <div>
        <a href="https://vitejs.dev" target="_blank">
          <img src={viteLogo} className="logo" alt="Vite logo" />
        </a>
        <a href="https://react.dev" target="_blank">
          <img src={reactLogo} className="logo react" alt="React logo" />
        </a>
      </div>
      <h1>Vite + React</h1>
      <div className="card">
+        <button onClick={increment}>count is {count}</button>
        <p>
          Edit <code>src/App.tsx</code> and save to test HMR
        </p>
      </div>
      <p className="read-the-docs">
        Click on the Vite and React logos to learn more
      </p>
    </>
  )
}

export default App
```

After making these changes, start the development server by running the following command:

<Tabs syncKey="package-manager">

<TabItem label="npm" icon="seti:npm">

```sh showLineNumbers=false
npm run dev
```

</TabItem>

<TabItem label="pnpm" icon="pnpm">

```sh showLineNumbers=false
pnpm run dev
```

</TabItem>

<TabItem label="Yarn" icon="seti:yarn">

```sh showLineNumbers=false
yarn run dev
```

</TabItem>

<TabItem label="Bun" icon="bun">

```sh showLineNumbers=false
bun run dev
```

</TabItem>

<TabItem label="Deno" icon="deno">

```sh showLineNumbers=false
deno run dev
```

</TabItem>

</Tabs>

Then, press **o** to open the application in your browser.

When you click the button, you should see the counter increment. This confirms that the program is working correctly.
