apps/web/src/content/docs/v4/getting-started/installation.mdx
---
title: Installation
description: Set up a new Effect project across different platforms like Node.js, Deno, Bun, and Vite + React with step-by-step installation guides.
sidebar:
  order: 2
---

import { Aside, Steps, Tabs, TabItem } from "@astrojs/starlight/components"

Requirements:

- TypeScript 5.9 or newer. TypeScript 7 is recommended for the best performance and compatibility with [Effect's TypeScript tooling](/docs/v4/getting-started/devtools/).
- Node.js, Deno, and Bun are supported.

<Aside type="note" title="Installing version 4">

Effect 4 is currently a release candidate, published under the `rc` tag on npm. Installing the `effect` package without a tag gives you the latest stable release, which is version 3. Use the `effect@rc` tag shown in the commands below to install version 4.

</Aside>

## Manual Installation

### Node.js

Follow these steps to create a new Effect project for [Node.js](https://nodejs.org/):

<Steps>

1. Create a project directory and navigate into it:

   ```sh showLineNumbers=false
   mkdir hello-effect
   cd hello-effect
   ```

2. Initialize a TypeScript project:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npm init -y
   npm install --save-dev typescript
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm init
   pnpm add --save-dev typescript
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn init -y
   yarn add --dev typescript
   ```

   </TabItem>

   </Tabs>

   This creates a `package.json` file with an initial setup for your TypeScript project.

3. Initialize TypeScript:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npx tsc --init
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm tsc --init
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn tsc --init
   ```

   </TabItem>

   </Tabs>

   When running this command, it will generate a `tsconfig.json` file that contains configuration options for TypeScript. One of the most important options to consider is the `strict` flag.

   Make sure to open the `tsconfig.json` file and verify that the value of the `strict` option is set to `true`.

   ```json showLineNumbers=false
   {
     "compilerOptions": {
       "strict": true
     }
   }
   ```

4. Install the necessary package as dependency:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npm install effect@rc
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm add effect@rc
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn add effect@rc
   ```

   </TabItem>

   </Tabs>

   This package will provide the foundational functionality for your Effect project.

</Steps>

Let's write and run a simple program to ensure that everything is set up correctly.

In your terminal, execute the following commands:

```sh showLineNumbers=false
mkdir src
touch src/index.ts
```

Open the `index.ts` file and add the following code:

```ts title="src/index.ts" import.meta.vitest name="node-js-1"
import { Effect, Console } from "effect"

const program = Console.log("Hello, World!")

const result = Effect.runSync(program) // => undefined
```

Run the `index.ts` file. Here we are using [tsx](https://github.com/privatenumber/tsx) to run the `index.ts` file in the terminal:

<Tabs syncKey="package-manager">

<TabItem label="npm" icon="seti:npm">

```sh showLineNumbers=false
npx tsx src/index.ts
```

</TabItem>

<TabItem label="pnpm" icon="pnpm">

```sh showLineNumbers=false
pnpm dlx tsx src/index.ts
```

</TabItem>

<TabItem label="Yarn" icon="seti:yarn">

```sh showLineNumbers=false
yarn dlx tsx src/index.ts
```

</TabItem>

</Tabs>

You should see the message `"Hello, World!"` printed. This confirms that the program is working correctly.

### Deno

Follow these steps to create a new Effect project for [Deno](https://deno.com/):

<Steps>

1. Create a project directory and navigate into it:

   ```sh showLineNumbers=false
   mkdir hello-effect
   cd hello-effect
   ```

2. Initialize Deno:

   ```sh showLineNumbers=false
   deno init
   ```

3. Install the necessary package as dependency:

   ```sh showLineNumbers=false
   deno add npm:effect@rc
   ```

   This package will provide the foundational functionality for your Effect project.

</Steps>

Let's write and run a simple program to ensure that everything is set up correctly.

Open the `main.ts` file and replace the content with the following code:

```ts title="main.ts" import.meta.vitest name="deno-1"
import { Effect, Console } from "effect"

const program = Console.log("Hello, World!")

const result = Effect.runSync(program) // => undefined
```

Run the `main.ts` file:

```sh showLineNumbers=false
deno run main.ts
```

You should see the message `"Hello, World!"` printed. This confirms that the program is working correctly.

### Bun

Follow these steps to create a new Effect project for [Bun](https://bun.sh/):

<Steps>

1. Create a project directory and navigate into it:

   ```sh showLineNumbers=false
   mkdir hello-effect
   cd hello-effect
   ```

2. Initialize Bun:

   ```sh showLineNumbers=false
   bun init
   ```

   When running this command, it will generate a `tsconfig.json` file that contains configuration options for TypeScript. One of the most important options to consider is the `strict` flag.

   Make sure to open the `tsconfig.json` file and verify that the value of the `strict` option is set to `true`.

   ```json showLineNumbers=false
   {
     "compilerOptions": {
       "strict": true
     }
   }
   ```

3. Install the necessary package as dependency:

   ```sh showLineNumbers=false
   bun add effect@rc
   ```

   This package will provide the foundational functionality for your Effect project.

</Steps>

Let's write and run a simple program to ensure that everything is set up correctly.

Open the `index.ts` file and replace the content with the following code:

```ts title="index.ts" import.meta.vitest name="bun-1"
import { Effect, Console } from "effect"

const program = Console.log("Hello, World!")

const result = Effect.runSync(program) // => undefined
```

Run the `index.ts` file:

```sh showLineNumbers=false
bun index.ts
```

You should see the message `"Hello, World!"` printed. This confirms that the program is working correctly.

### Vite + React

Follow these steps to create a new Effect project for [Vite](https://vitejs.dev/guide/) + [React](https://react.dev/):

<Steps>

1. Scaffold your Vite project, open your terminal and run the following command:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   # npm 6.x
   npm create vite@latest hello-effect --template react-ts
   # npm 7+, extra double-dash is needed
   npm create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   bun create vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   deno init --npm vite@latest hello-effect -- --template react-ts
   ```

   </TabItem>

   </Tabs>

   This command will create a new Vite project with React and TypeScript template.

2. Navigate into the newly created project directory and install the required packages:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   cd hello-effect
   npm install
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   cd hello-effect
   pnpm install
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   cd hello-effect
   yarn install
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   cd hello-effect
   bun install
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   cd hello-effect
   deno install
   ```

   </TabItem>

   </Tabs>

   Once the packages are installed, open the `tsconfig.json` file and ensure that the value of the `strict` option is set to true.

   ```json showLineNumbers=false
   {
     "compilerOptions": {
       "strict": true
     }
   }
   ```

3. Install the necessary package as dependency:

   <Tabs syncKey="package-manager">

   <TabItem label="npm" icon="seti:npm">

   ```sh showLineNumbers=false
   npm install effect@rc
   ```

   </TabItem>

   <TabItem label="pnpm" icon="pnpm">

   ```sh showLineNumbers=false
   pnpm add effect@rc
   ```

   </TabItem>

   <TabItem label="Yarn" icon="seti:yarn">

   ```sh showLineNumbers=false
   yarn add effect@rc
   ```

   </TabItem>

   <TabItem label="Bun" icon="bun">

   ```sh showLineNumbers=false
   bun add effect@rc
   ```

   </TabItem>

   <TabItem label="Deno" icon="deno">

   ```sh showLineNumbers=false
   deno add npm:effect@rc
   ```

   </TabItem>

   </Tabs>

   This package will provide the foundational functionality for your Effect project.

</Steps>

Now, let's write and run a simple program to ensure that everything is set up correctly.

Open the `src/App.tsx` file and replace its content with the following code:

```diff lang="tsx" title="src/App.tsx"
+import { useState, useMemo, useCallback } from "react"
import reactLogo from "./assets/react.svg"
import viteLogo from "/vite.svg"
import "./App.css"
+import { Effect } from "effect"

function App() {
  const [count, setCount] = useState(0)

+  const task = useMemo(
+    () => Effect.sync(() => setCount((current) => current + 1)),
+    [setCount]
+  )
+
+  const increment = useCallback(() => Effect.runSync(task), [task])

  return (
    <>
      <div>
        <a href="https://vitejs.dev" target="_blank">
          <img src={viteLogo} className="logo" alt="Vite logo" />
        </a>
        <a href="https://react.dev" target="_blank">
          <img src={reactLogo} className="logo react" alt="React logo" />
        </a>
      </div>
      <h1>Vite + React</h1>
      <div className="card">
+        <button onClick={increment}>count is {count}</button>
        <p>
          Edit <code>src/App.tsx</code> and save to test HMR
        </p>
      </div>
      <p className="read-the-docs">
        Click on the Vite and React logos to learn more
      </p>
    </>
  )
}

export default App
```

After making these changes, start the development server by running the following command:

<Tabs syncKey="package-manager">

<TabItem label="npm" icon="seti:npm">

```sh showLineNumbers=false
npm run dev
```

</TabItem>

<TabItem label="pnpm" icon="pnpm">

```sh showLineNumbers=false
pnpm run dev
```

</TabItem>

<TabItem label="Yarn" icon="seti:yarn">

```sh showLineNumbers=false
yarn run dev
```

</TabItem>

<TabItem label="Bun" icon="bun">

```sh showLineNumbers=false
bun run dev
```

</TabItem>

<TabItem label="Deno" icon="deno">

```sh showLineNumbers=false
deno run dev
```

</TabItem>

</Tabs>

Then, press **o** to open the application in your browser.

When you click the button, you should see the counter increment. This confirms that the program is working correctly.
